--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         
         <section>
             <div id="ham">&#9776;</div>
-            <div><img style="margin-left:50vw"src="/img/twitter.png"></div>
-            <div><img src="/img/insta.png"></div>
+            <div><img style="margin-left:50vw"src="./img/twitter.png"></div>
+            <div><img src="./img/insta.png"></div>
         </section>
     </div>
     </nav>    
